syntax = "proto3";

package pb;

import "global.proto";

message UploadFileParam {
}

message UploadFileResponse {
    bool done =1;
    string text = 2;
}

service RPC_Upload {
    rpc UploadFile (UploadFileParam) returns (UploadFileResponse);

}

