syntax = "proto3";

package pb;

import "global.proto";

// rules: qevent_rpc
service RPC_Group {
    //rpc Group (Param) returns (Response);

    // CrDU
    rpc GroupCreateGroup (GroupCreateGroupParam) returns (GroupCreateGroupResponse); // qevent_id_40
    rpc GroupEditGroup (GroupEditGroupParam) returns (GroupEditGroupResponse);// qevent
    rpc GroupDeleteGroup (GroupDeleteGroupParam) returns (GroupDeleteGroupResponse);// qevent

    // Members
    rpc GroupAddAdmin (GroupAddAdminParam) returns (GroupAddAdminResponse); // ??
    rpc GroupAddMember (GroupAddMemberParam) returns (GroupAddMemberResponse); // qevent_id_50
    rpc GroupRemoveMember (GroupRemoveMemberParam) returns (GroupRemoveMemberResponse); // qevent
    rpc GroupChangeMemberLevel (GroupChangeMemberLevelParam) returns (GroupChangeMemberLevelResponse); // qevent
    rpc GroupChangeMemberPermission (GroupChangeMemberPermissionParam) returns (GroupChangeMemberPermissionResponse); // qevent
    rpc GroupJoinGroup (JoinGroupParam) returns (JoinGroupResponse); // qevent
    rpc GroupLeaveGroup (GroupLeaveGroupParam) returns (GroupLeaveGroupResponse); // qevent
    rpc GroupBanMember (GroupBanMemberParam) returns (GroupBanMemberResponse); // qevent // ban or block?

    // Privacy
    rpc GroupChangePrivacy (GroupChangePrivacyParam) returns (GroupChangePrivacyResponse); // qevent_id_70
    rpc GroupChangeDefaultPermission (GroupChangeDefaultPermissionParam) returns (GroupChangeDefaultPermissionResponse);
    rpc GroupRevokeLink (GroupRevokeLinkParam) returns (GroupRevokeLinkResponse); // qevent
    rpc GroupChangeUsername (GroupChangeUsernameParam) returns (GroupChangeUsernameResponse); // qevent

    // Messages
    rpc GroupSendMessage (GroupSendMessageParam) returns (GroupSendMessageResponse); // qevent_id_10
    rpc GroupEditMessage (GroupEditMessageParam) returns (GroupEditMessageResponse); // qevent
    rpc GroupPinMessage (GroupPinMessageParam) returns (GroupPinMessageResponse); // qevent
    rpc GroupUnPinMessage (GroupUnPinMessageParam) returns (GroupUnPinMessageResponse); // qevent
    rpc GroupDeleteMessage (GroupDeleteMessageParam) returns (GroupDeleteMessageResponse); // remove?
    rpc GroupDeleteMessages (GroupDeleteMessagesParam) returns (GroupDeleteMessagesResponse); // qevent
    rpc GroupDeleteHistory (GroupDeleteHistoryParam) returns (GroupDeleteHistoryResponse); // qevent
    rpc GroupClearHistory (GroupClearHistoryParam) returns (GroupClearHistoryResponse); // qevent

    // Others
    rpc GroupAvatarAdd (GroupAvatarAddParam) returns (GroupAvatarAddResponse); // qevent_id_80
    rpc GroupAvatarChange (GroupAvatarChangeParam) returns (GroupAvatarChangeResponse); // remove?
    rpc GroupAvatarDelete (GroupAvatarDeleteParam) returns (GroupAvatarDeleteResponse); // qevent
    rpc GroupSendDoingAction (GroupSendDoingActionParam) returns (GroupSendDoingActionResponse);
    rpc GroupReportGroup (GroupReportGroupParam) returns (GroupReportGroupResponse); // qevent -- should be here

    // Views
    rpc GroupGetFull (GroupGetFullParam) returns (GroupGetFullResponse);
    rpc GroupGetMessagesList (GroupGetMessagesListParam) returns (GroupGetMessagesListResponse);
    rpc GroupGetMediaList (GroupGetMediaListParam) returns (GroupGetMediaListResponse);
    rpc GroupGetMembersList (GroupGetMembersListParam) returns (GroupGetMembersListResponse);
    rpc GroupGetAdminsList (GroupGetAdminsListParam) returns (GroupGetAdminsListResponse);
    rpc GroupAvatarGetList (GroupAvatarGetListParam) returns (GroupAvatarGetListResponse);
}


// CrDU
message GroupCreateGroupParam {
    uint32 group_cid = 1;
    uint32 creator_profile_cid = 2;
    string group_title = 3; // or _name
    bool history_viewable = 8; // if older message is is viewable for new members > now true for all new groups
    bool force_join = 9; // view history without joining
    bool global_search = 17; // global searchable in bar > force_join must be false + history_viewable = ture
    string about = 15;
    // Not Now
    string user_name = 4; // with "group" suffix > not now > all is private now
}

message GroupCreateGroupResponse {

}


message GroupEditGroupParam {
    uint32 group_cid = 1;
    uint32 by_profile_cid = 2;
    bool set_new_title = 3;
    string new_title = 4;
    bool set_new_about = 5;
    string new_about = 6;
    // Add others editable options
}

message GroupEditGroupResponse {

}


message GroupDeleteGroupParam {
    uint32 group_cid = 1;
    uint32 by_profile_cid = 2;
}

message GroupDeleteGroupResponse {

}


// Members
message GroupAddAdminParam {
    // NOT NOW
}

message GroupAddAdminResponse {
}


message GroupAddMemberParam {
    uint32 group_cid = 1;
    uint32 by_profile_cid = 2;
    uint32 new_member_profile_cid = 3;
}

message GroupAddMemberResponse {
}


message GroupRemoveMemberParam {
    uint32 group_cid = 1;
    uint32 by_profile_cid = 2;
    uint32 member_profile_cid = 3;
}

message GroupRemoveMemberResponse {
}


message GroupChangeMemberLevelParam {
    // NOT NOW
}

message GroupChangeMemberLevelResponse {
}


message GroupChangeMemberPermissionParam {
    // NOT NOW
}

message GroupChangeMemberPermissionResponse {
}


message JoinGroupParam {
    uint32 group_cid = 1;
    uint32 new_member_profile_cid = 3;
}

message JoinGroupResponse {
}


message GroupLeaveGroupParam {
    uint32 group_cid = 1;
    uint32 member_profile_cid = 3;
}

message GroupLeaveGroupResponse {
}


message GroupBanMemberParam {
    uint32 group_cid = 1;
    uint32 by_profile_cid = 2;
    uint32 banned_profile_cid = 3;
}

message GroupBanMemberResponse {
}


// Privacy
message GroupChangePrivacyParam {
    // NOT NOW
}

message GroupChangePrivacyResponse {

}


message GroupChangeDefaultPermissionParam {
    // NOT NOW
}

message GroupChangeDefaultPermissionResponse {
}


message GroupRevokeLinkParam {
    // NOT NOW
}

message GroupRevokeLinkResponse {
}


message GroupChangeUsernameParam {
    // NOT NOW
}

message GroupChangeUsernameResponse {
}


// Messages
message GroupSendMessageParam {
    uint32 group_id = 1;
    NewMessageInput message_input = 2;
}

message GroupSendMessageResponse {

}


message GroupEditMessageParam {
    uint32 group_id = 1;
    uint32 by_profile_cid = 3;
    string new_text = 2;
}

message GroupEditMessageResponse {

}


message GroupPinMessageParam {
    uint32 group_id = 1;
}

message GroupPinMessageResponse {

}


message GroupUnPinMessageParam {
    uint32 group_id = 1;
}

message GroupUnPinMessageResponse {

}


message GroupDeleteMessageParam {
    uint32 group_id = 1;
}

message GroupDeleteMessageResponse {

}


message GroupDeleteMessagesParam {
    uint32 group_cid = 1;
    uint32 by_profile_cid = 2;
    repeated uint64 message_ids = 3;
}

message GroupDeleteMessagesResponse {

}


message GroupDeleteHistoryParam {
    // NOT NOW
}

message GroupDeleteHistoryResponse {
}


message GroupClearHistoryParam {
    // NOT NOW
}

message GroupClearHistoryResponse {
}


// Others
message GroupAvatarAddParam {
    uint32 group_id = 1;
}

message GroupAvatarAddResponse {}


message GroupAvatarChangeParam {
    // NOT NOW
}

message GroupAvatarChangeResponse {
}


message GroupAvatarDeleteParam {
    uint32 group_id = 1;
}

message GroupAvatarDeleteResponse {}


message GroupAvatarGetListParam {
    uint32 group_cid = 1;
}

message GroupAvatarGetListResponse {}


message GroupSendDoingActionParam {
    // NOT NOW
}

message GroupSendDoingActionResponse {
}


message GroupReportGroupParam {
    // NOT NOW
}

message GroupReportGroupResponse {
}


// Views
message GroupGetFullParam {
    uint32 group_cid = 1;
}

message GroupGetFullResponse {
}


message GroupGetMessagesListParam {
    uint32 group_cid = 1;
}

message GroupGetMessagesListResponse {
}


message GroupGetMediaListParam {
    uint32 group_cid = 1;
}

message GroupGetMediaListResponse {
}


message GroupGetMembersListParam {
    uint32 group_cid = 1;
}

message GroupGetMembersListResponse {
}


message GroupGetAdminsListParam {
    // NOT NOW
}

message GroupGetAdminsListResponse {
}


// Dep
message GroupSetDraftParam {
    uint32 group_id = 1;
}

message GroupSetDraftResponse {

}


/*

message Param {
}

message Response {
}

*/
