syntax = "proto3";

//package pbs;
option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

//import "enums.proto";
//import "views.proto";

message GroupAvatarAddParam {
    uint32 group_id = 1;
}

message GroupAvatarAddResponse {}

message GroupAvatarDeleteParam {
    uint32 group_id = 1;
}

message GroupAvatarDeleteResponse {}

message GroupAvatarGetListParam {
    uint32 group_id = 1;
}

message GroupAvatarGetListResponse {}

message GroupSendMessageParam {
    uint32 group_id = 1;
}

message GroupSendMessageResponse {

}

message GroupEditMessageParam {
    uint32 group_id = 1;
}

message GroupEditMessageResponse {

}

message GroupPinMessageParam {
    uint32 group_id = 1;
}

message GroupPinMessageResponse {

}

message GroupUnPinMessageParam {
    uint32 group_id = 1;
}

message GroupUnPinMessageResponse {

}

message GroupDeleteMessageParam {
    uint32 group_id = 1;
}

message GroupDeleteMessageResponse {

}

message GroupSetDraftParam {
    uint32 group_id = 1;
}

message GroupSetDraftResponse {

}

message GroupGetFullMessageParam {
    uint32 group_id = 1;
}

message GroupGetFullMessageResponse {

}

// imple seq:
// add rpc
// organize parma/response  for the last part
// strive for make api solid
// imple things not just for ui but full
service RPC_Group {
    //rpc Group (Param) returns (Response);

    // CrDU
    rpc GroupCreateGroup (GroupCreateGroupParam) returns (GroupCreateGroupResponse);
    rpc GroupEditGroup (GroupEditGroupParam) returns (GroupEditGroupResponse);
    rpc GroupDeleteGroup (GroupDeleteGroupParam) returns (GroupDeleteGroupResponse);

    // Members
    rpc GroupAddAdmin (GroupAddAdminParam) returns (GroupAddAdminResponse); // ??
    rpc GroupAddMember (GroupAddMemberParam) returns (GroupAddMemberResponse);
    rpc GroupRemoveMember (GroupRemoveMemberParam) returns (GroupRemoveMemberResponse);
    rpc GroupChangeMemberLevel (GroupChangeMemberLevelParam) returns (GroupChangeMemberLevelResponse);
    rpc GroupChangeMemberPermission (GroupChangeMemberPermissionParam) returns (GroupChangeMemberPermissionResponse);
    rpc GroupJoinGroup (JoinGroupParam) returns (JoinGroupResponse);
    rpc GroupLeaveGroup (GroupLeaveGroupParam) returns (GroupLeaveGroupResponse);
    rpc GroupBanMember (GroupBanMemberParam) returns (GroupBanMemberResponse); // ban or block?

    // Privacy
    rpc GroupChangePrivacy (GroupChangePrivacyParam) returns (GroupChangePrivacyResponse);
    rpc GroupChangeDefaultPermission (GroupChangeDefaultPermissionParam) returns (GroupChangeDefaultPermissionResponse);
    rpc GroupRevokeLink (GroupRevokeLinkParam) returns (GroupRevokeLinkResponse);
    rpc GroupChangeUsername (GroupChangeUsernameParam) returns (GroupChangeUsernameResponse);

    // Messages
    rpc GroupSendMessage (GroupSendMessageParam) returns (GroupSendMessageResponse);
    rpc GroupEditMessage (GroupEditMessageParam) returns (GroupEditMessageResponse);
    rpc GroupPinMessage (GroupPinMessageParam) returns (GroupPinMessageResponse);
    rpc GroupUnPinMessage (GroupUnPinMessageParam) returns (GroupUnPinMessageResponse);
    rpc GroupDeleteMessage (GroupDeleteMessageParam) returns (GroupDeleteMessageResponse); // remove?
    rpc GroupDeleteMessages (GroupDeleteMessagesParam) returns (GroupDeleteMessagesResponse);
    rpc GroupClearHistory (GroupClearHistoryParam) returns (GroupClearHistoryResponse);

    // Others
    rpc GroupAvatarAdd (GroupAvatarAddParam) returns (GroupAvatarAddResponse);
    rpc GroupAvatarChange (GroupAvatarChangeParam) returns (GroupAvatarChangeResponse); // remove?
    rpc GroupAvatarDelete (GroupAvatarDeleteParam) returns (GroupAvatarDeleteResponse);
    rpc GroupAvatarGetList (GroupAvatarGetListParam) returns (GroupAvatarGetListResponse); // view?
    rpc GroupSendDoingAction (GroupSendDoingActionParam) returns (GroupSendDoingActionResponse);
    rpc GroupReportGroup (GroupReportGroupParam) returns (GroupReportGroupResponse);

    // Views
    rpc GroupGetFull (GroupGetFullMessageParam) returns (GroupGetFullMessageResponse);
    rpc GroupGetMessagesList (GroupGetMessagesListParam) returns (GroupGetMessagesListResponse);
    rpc GroupGetMediaList (GroupGetMediaListParam) returns (GroupGetMediaListResponse);
    rpc GroupGetMembersList (GroupGetMembersListParam) returns (GroupGetMembersListResponse);
    rpc GroupGetAdminsList (GroupGetMembersListParam) returns (GroupGetMembersListResponse);

    // Deprecated
    rpc GroupSetDraft (GroupSetDraftParam) returns (GroupSetDraftResponse); // draft via direct

}

// CrDU
message GroupCreateGroupParam {
    uint32 group_id = 1;
}

message GroupCreateGroupResponse {

}

message GroupEditGroupParam {
    uint32 group_id = 1;
}

message GroupEditGroupResponse {

}

message GroupDeleteGroupParam {
    uint32 group_id = 1;
}

message GroupDeleteGroupResponse {

}

// Members
message Param {
}

message Response {
}

message GroupAddAdminParam {
}

message GroupAddAdminResponse {
}

message GroupAddMemberParam {
}

message GroupAddMemberResponse {
}

message GroupRemoveMemberParam {
}

message GroupRemoveMemberResponse {
}

message GroupChangeMemberLevelParam {
}

message GroupChangeMemberLevelResponse {
}

message GroupChangeMemberPermissionParam {
}

message GroupChangeMemberPermissionResponse {
}

message JoinGroupParam {
}

message JoinGroupResponse {
}

message GroupLeaveGroupParam {
}

message GroupLeaveGroupResponse {
}

message GroupBanMemberParam {
}

message GroupBanMemberResponse {
}

// Privacy

message GroupChangePrivacyParam {
    uint32 group_id = 1;
}

message GroupChangePrivacyResponse {

}

message GroupChangeDefaultPermissionParam {
}

message GroupChangeDefaultPermissionResponse {
}

message GroupRevokeLinkParam {
}

message GroupRevokeLinkResponse {
}

message GroupChangeUsernameParam {
}

message GroupChangeUsernameResponse {
}

// Messages

message GroupDeleteMessagesParam {
    uint32 group_id = 1;
}

message GroupDeleteMessagesResponse {

}

message GroupClearHistoryParam {
}

message GroupClearHistoryResponse {
}

// Others

message GroupAvatarChangeParam {
}

message GroupAvatarChangeResponse {
}

message GroupSendDoingActionParam {
}

message GroupSendDoingActionResponse {
}

message GroupReportGroupParam {
}

message GroupReportGroupResponse {
}

// Views

message GroupGetMessagesListParam {
}

message GroupGetMessagesListResponse {
}

message GroupGetMembersListParam {
}

message GroupGetMembersListResponse {
}

message GroupGetMediaListParam {
}

message GroupGetMediaListResponse {
}

// Dep

/*

message Param {
}

message Response {
}

*/
